correct overflow for mobile sceens

--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -12,6 +12,7 @@
 .languageDropdown .languageSelect {
   justify-self: center;
   width: 100%;
+  overflow: auto;
 }
 
 .languageDropdown .languageSelect .languageIcon {
@@ -37,6 +38,8 @@
   border-radius: 3px;
   cursor: pointer;
   font-size: 1.2rem;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .languageDropdown .languageSelect select:focus {
